--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>
                         Detta är kursen för dig som vill lära dig grunderna inom test eller helt enkelt vill bli mer effektiv i ditt testarbete. Den här kursen ger dig kännedom om effektiva metoder, arbetssätt och smarta verktyg för testning.
                         <br></br>
-                        <a class="link" href="#">Boka kursen här</a>
+                        <a class="link" href="courses.html">Boka kursen här</a>
                     </p>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <p>
                         Du som dagligen arbetar med system med relationsdatabaser har stor nytta av denna kurs. Här får du lära dig att sammanställa rapporter utifrån information som finns i databaser.
                         <br></br>
-                        <a class="link" href="#">Boka kursen här</a>
+                        <a class="link" href="courses.html">Boka kursen här</a>
                     </p>
                 </div>
             </div>
